style.css
a {
  outline: none;
  text-decoration: none;
  color: #000000;
}
* {
  box-sizing: border-box;
}
.wrapper-img {
  display: flex;
  justify-content: center;
  align-items: center;
}
.wrapper-img img {
  max-width: 100%;
  max-height: 100%;
  width: 100%;
}
.wrapper-img a {
  width: 100%;
}
address {
  font-style: normal;
}
ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
html {
  line-height: 1.15; /* 1 */
  -webkit-text-size-adjust: 100%; /* 2 */
  font-family: Montserrat, Arial, sans-serif;
  color: #000000;
}

/* Sections
   ========================================================================== */

/**
 * Remove the margin in all browsers.
 */

body {
  margin: 0;
  font-weight: 300;
  letter-spacing: 0.3px;
}

/**
 * Render the `main` element consistently in IE.
 */

main {
  display: block;
}

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 */
/* Grouping content
   ========================================================================== */

/**
 * 1. Add the correct box sizing in Firefox.
 * 2. Show the overflow in Edge and IE.
 */

iframe {
  margin: 0;
  border: none;
  height: 100%;
  width: 100%;
}
h1,
h2,
h3,
h4,
h5,
h6,
h7 {
  font-family: Montserrat, Arial, sans-serif;
  color: #000000;
  margin: 0;
}
h1 {
  font-weight: 500;
  font-size: 24px;
  line-height: 28px;
  margin: 0 0 40px 0;
  font-family: MontserratBold, Arial, sans-serif;
}
h2 {
  font-weight: 500;
  font-size: 24px;
  line-height: 28px;
  margin: 0 0 20px 0;
  font-family: MontserratBold, Arial, sans-serif;
}

p {
  margin: 0;
}
.paragraph {
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
  margin-bottom: 10px;
}

.bold_text {
  font-family: Montserrat, Arial, sans-serif;
  font-weight: 600;
}

hr {
  box-sizing: content-box; /* 1 */
  height: 0; /* 1 */
  overflow: visible; /* 2 */
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */

pre {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

/* Text-level semantics
   ========================================================================== */

/**
 * Remove the gray background on active links in IE 10.
 */

a {
  background-color: transparent;
}

/**
 * 1. Remove the bottom border in Chrome 57-
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */

abbr[title] {
  border-bottom: none; /* 1 */
  text-decoration: underline; /* 2 */
  text-decoration: underline dotted; /* 2 */
}

/**
 * Add the correct font weight in Chrome, Edge, and Safari.
 */

b,
strong {
  font-weight: bolder;
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */

code,
kbd,
samp {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

/**
 * Add the correct font size in all browsers.
 */

small {
  font-size: 80%;
}

/**
 * Prevent `sub` and `sup` elements from affecting the line height in
 * all browsers.
 */

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

/* Embedded content
   ========================================================================== */

/**
 * Remove the border on images inside links in IE 10.
 */

img {
  border-style: none;
}

/* Forms
   ========================================================================== */

/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */

button,
input,
optgroup,
select,
textarea {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
  outline: none;
}

/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */

button,
input {
  /* 1 */
  overflow: visible;
}

/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */

button,
select {
  /* 1 */
  text-transform: none;
}

/**
 * Correct the inability to style clickable types in iOS and Safari.
 */

button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}

/**
 * Remove the inner border and padding in Firefox.
 */

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

/**
 * Restore the focus styles unset by the previous rule.
 */

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
 * Correct the padding in Firefox.
 */

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */

legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  vertical-align: baseline;
}

/**
 * Remove the default vertical scrollbar in IE 10+.
 */

textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/* Interactive
   ========================================================================== */

/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */

details {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */

summary {
  display: list-item;
}

/* Misc
   ========================================================================== */

/**
 * Add the correct display in IE 10+.
 */

template {
  display: none;
}

/**
 * Add the correct display in IE 10.
 */

[hidden] {
  display: none;
}

.visuallyhidden {
  position: absolute;
  clip: rect(1px, 1px, 1px, 1px);
  -webkit-clip-path: inset(0px 0px 99.9% 99.9%);
  clip-path: inset(0px 0px 99.9% 99.9%);
  overflow: hidden;
  height: 1px;
  width: 1px;
  padding: 0;
  border: 0;
}

h2.title {
  padding: 5px 5px 5px 20px;
  background-color: #fddd09;
}
.paragraph {
  font-size: 16px;
  line-height: 20px;
}
code {
  font-family: Montserrat, Arial, sans-serif;
  font-size: 16px;
}
.telegram svg {
  width: 40px;
  height: 40px;
  margin-top: 10px;
}
.telegram svg {
  transition: 1s;
}

.telegram:hover svg {
  transform: translate(120px, 5px) rotate(40deg) scale(1.2);
}

.telegram svg .path_1 {
  fill: #009ae4;
}
.telegram svg .path_2 {
  fill: #25d9f8;
}
.telegram svg .path_3 {
  fill: #00c0f1;
}

.telegram svg:hover .path_1 {
  fill: #00acff;
  transition: 800ms;
}
.telegram svg:hover .path_2 {
  fill: #5ce4fc;
  transition: 800ms;
}
.telegram svg:hover .path_3 {
  fill: #00cbff;
  transition: 800ms;
}

.link-item {
  font-size: 24px;
  color: #fff;
}

.header,
.footer {
  background-color: #332c2c;
  height: 300px;
  padding: 20px 15%;
}

.navbar svg {
  flex-basis: 15%;
  fill: #fff;
}

.navbar .wrapper-img {
  justify-content: flex-start;
}

.site-main {
  display: flex;
  flex-basis: 100%;
  margin: -200px 15%;
  justify-content: space-between;
}
.content_left {
  flex-basis: 35%;
  background-color: #fddd09;
}

.content_block {
  flex-basis: 60%;
}
.content_block ul.list {
  height: 80px;
  overflow-y: scroll;
}
.content_block ul.list::-webkit-scrollbar {
  width: 4px;
  background-color: ##ffffff;
}
.content_block ul.list::-webkit-scrollbar-thumb {
  background-color: #fddd09;
}


aside.content_left {
  padding: 50px;
}
.content_left article {
  margin-top: 20px;
}

.article {
  margin: 0 0 40px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.article .paragraph {
  margin: 0 20px;
}

.list {
  margin: 0 20px 0 35px;
}
.list .list_item {
  font-size: 16px;
  line-height: 20px;
  list-style: disc;
}

.line_text {
  margin-left: 20px;
  color: #fff;
  display: block;
}
.italic {
  color: #fff;
}

details:hover {
  border: 1px solid #fff;
  outline: none;
}
details:active {
  border: 1px solid #fff;
  outline: none;
}

details:focus {
  border: 1px solid #fff;
  outline: none;
}

.content_left .article title {
  background-color: #ffe435;
  border-radius: 5px;
  box-shadow: 4px 4px 15px rgb(0 0 0 / 15%);
}

figure {
  padding: 0;
  margin: 0;
}

@media screen and (min-width: 1800px) {
  .header,
  .footer {
    padding: 20px 15%;
  }
  .site-main {
    margin: -200px 15%;
  }
}

@media screen and (min-width: 2200px) {
  .header,
  .footer {
    padding: 20px 20%;
  }
  .site-main {
    margin: -200px 20%;
  }
}

@media screen and (min-width: 3200px) {
  .header,
  .footer {
    padding: 20px 28%;
  }
  .site-main {
    margin: -200px 28%;
  }
}

@media screen and (max-width: 1200px) {
  .header,
  .footer {
    padding: 20px 12%;
  }
  .site-main {
    margin: -200px 12%;
  }
}

@media screen and (max-width: 991px) {
  .header,
  .footer {
    padding: 20px 9%;
  }
  .site-main {
    margin: -200px 9%;
  }
  aside.content_left {
    padding: 30px;
  }
  .link-item {
    font-size: 22px;
  }
  h2 {
    font-size: 22px;
    line-height: 26px;
  }
  .telegram svg {
    width: 30px;
    height: 30px;
  }
}

@media screen and (max-width: 767px) {
  .content_block .article details .wrapper-img {
    width: 80%;
  }
  aside.content_left {
    padding: 10px;
  }
  .header,
  .footer {
    padding: 20px 5%;
  }
  .site-main {
    margin: -200px 5%;
  }
  .link-item {
    font-size: 18px;
  }
  h2 {
    font-size: 18px;
    line-height: 22px;
  }
  .content_block .article details .wrapper-img {
    width: 95%;
  }
}

@media screen and (max-width: 479px) {
  .site-main {
    flex-direction: column;
  }
  .link-item {
    color: #000;
  }
  .content_block .article:first-of-type {
    margin: 20px 0 40px 0;
  }
}

